--- a/docs/pkgdown.css
+++ b/docs/pkgdown.css
@@ -57,7 +57,10 @@ img.icon {
 }
 
 img {
-  max-width: 100%;
+        max-width: 85%;
+        max-height: 100%;
+        margin-left: auto;
+        margin-right: auto;
 }
 
 /* Fix bug in bootstrap (only seen in firefox) */
